fix shifting buttons

--- a/styles/modules/_button.scss
+++ b/styles/modules/_button.scss
@@ -73,4 +73,8 @@
   .btn {
     margin-right: 8px;
   }
+
+  .btn--shift-right {
+    margin-right: 0;
+  }
 }
